fix footer logo alignment in firefox

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -431,7 +431,6 @@ $GRAY_LIGHT: #b1aedc;
 			border-bottom: 2px solid $LT_BORDER;
 			text-align: center;
 			a {
-				display: inline-block;
 				line-height: 62px;
 			}
 			.fftf {
